# cne-wtf-rss-to-mastodon

./: Cargo.toml  config.origin.toml
src/: cne_rss.rs  config.rs  main.rs  mastodon.rs
