[package]
name = "cne-wtf-rss-to-mastodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "multipart"] }
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
rss = "2.0.7"
serde = "1.0.196"
serde_derive = "1.0.196"
toml = "0.8.8"
scraper = "0.18.1"
